# Baqend

./: Baqend_Dummy_Data_Set.csv  amalysis.ipynb  analysis.py  main.py  pyproject.toml
