[project]
name = "baqend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "baycomp>=1.0.3",
    "matplotlib>=3.10.3",
    "pingouin>=0.5.5",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "scipy>=1.16.0",
]
